# VibeCAD

./: .gitignore  .mcpbignore  LICENSE  PRIVACY.md  README.md  manifest.json  mcpb_entry.py  pyproject.toml
.github/scripts/: check_release_versions.py
.github/workflows/: ci.yml  release.yml
docs/: ACCEPTANCE_TESTS.md  AGENT_ARCHITECTURE.md  ARCHITECTURE.md  CAD_AGENT_PRODUCT_RESEARCH.md  CAD_BACKEND_RESEARCH.md  DIRECTORY_SUBMISSION.md  PRODUCT_CAPABILITY_ROADMAP.md  PRODUCT_STRATEGY.md  USER_GUIDE.md
docs/orchestrated/: orchestrated-execution-portability-validation.md  vibecad-agent-core-phase1.md  vibecad-agent-stage3.md  vibecad-p0b-core.md  vibecad-task-kernel-phase2.md
docs/superpowers/plans/: 2026-06-08-runtime-installer.md  2026-06-09-round2-modeling.md  2026-06-09-round3-visual.md  2026-06-09-round4-position.md  2026-06-09-round5-referencing.md  2026-06-10-round10-mcpb.md  2026-06-10-round6a-multiview.md  2026-06-10-round6b-modify.md  2026-06-10-round7-features.md  2026-06-10-round8-assembly.md  2026-06-10-round9-release.md  2026-06-12-round11-auto-init-uninstall.md  2026-07-02-agent-orchestrator-prototype-draft.md  2026-07-02-r11-spike-user-steps.md  2026-07-12-orchestrated-execution-cross-agent-implementation.md
docs/superpowers/reports/: 2026-06-09-pr3-review.md  2026-07-02-r11-preflight-simulated-tests.md  2026-07-03-centroid-drift-probe.md
docs/superpowers/research/: 2026-06-08-install-env-research.md
docs/superpowers/specs/: 2026-06-08-vibecad-design.md  2026-06-09-round5-referencing-design.md  2026-06-10-round10-mcpb-onboarding-design.md  2026-06-10-round6a-multiview-design.md  2026-06-10-round6b-modify-design.md  2026-06-10-round7-features-design.md  2026-06-10-round8-assembly-design.md  2026-06-10-round9-release-design.md  2026-06-12-round11-auto-init-uninstall-design.md  2026-07-02-vibecad-agent-architecture-design.md  2026-07-12-orchestrated-execution-cross-agent-design.md
skills/vibecad-agent/: SKILL.md
skills/vibecad-agent/agents/: openai.yaml
src/vibecad/: __init__.py  __main__.py  errors.py  freecad_env.py  launcher.py  mcp_transport.py  server.py  supervisor.py
src/vibecad/application/: __init__.py  agent.py  artifact_manifest.py  artifacts.py  data.py  discovery.py  project.py  project_api.py  project_create.py  public_surface.py  revision_compare.py  revision_discovery.py  task_api.py
src/vibecad/daemon/: __init__.py  __main__.py  adapters.py  bootstrap.py  client.py  facade.py  local_identity.py  service.py  state.py
tests/: conftest.py  fake_server.py  test_acceptance_verifier.py  test_agent_application.py  test_agent_skill.py  test_annotate.py  test_artifact_manifest.py  test_artifact_manifest_api.py  test_artifact_materialization.py  test_cad_execution_port.py  test_candidate_revision.py  test_engine_session.py  test_execution_adapter.py  test_execution_registry.py  test_feedback_text.py  test_file_grants.py  test_freecad_env.py  test_freecad_worker.py  test_gltf.py  test_gltf_slow.py  test_installer.py  test_integrity.py  test_interaction_protocol.py  test_launcher.py  test_launcher_uninstall_integration.py  test_local_daemon.py  test_managed_checkout.py  test_mcp_transport.py  test_mcpb_manifest.py  test_micromamba.py  test_model_program.py  test_multiview.py  test_naming.py  test_object_selectors.py  test_p0b_acceptance.py  test_paths.py  test_persist.py  test_platform.py  test_program_executor.py  test_project_api.py  (+43 more)
(+105 files in other folders)
