[project]
name = "vibecad"
version = "0.4.0"
description = "Chat-native parametric CAD via FreeCAD MCP — build, modify, and export 3D models through natural language."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Wang Tao", email = "wangtao9090@gmail.com" }]
keywords = ["cad", "freecad", "mcp", "3d-printing", "parametric", "ai", "3d-modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Intended Audience :: End Users/Desktop",
]

# 注意：FreeCAD 不在此列 —— 它是 conda 包，由 micromamba 运行时安装器（D4）拉取，
# 与本 server 的 pip 依赖隔离。此处仅声明纯 pip 可装依赖。
dependencies = [
    "mcp==1.27.2",        # S3-7 低层协议边界与 MCPB 冻结在该 SDK 版本
    "hatchling==1.28.0",  # MCPB 的无隔离本地 wheel 构建必须来自同一冻结环境
    "pygltflib>=1.16.0",   # glTF 导出器，D6
    "numpy>=1.26",
    "pyyaml>=6.0",         # 规则引擎 YAML，D2
    "matplotlib>=3.5",     # 软渲染（matplotlib Agg，无 GPU）；松约束让 conda 满足
]

[project.urls]
Homepage = "https://github.com/wangtao9090/VibeCAD"
Repository = "https://github.com/wangtao9090/VibeCAD"

[project.scripts]
vibecad = "vibecad.launcher:main"   # uvx 一键入口（先跑纯 stdlib launcher）

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibecad"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not slow'"
markers = ["slow: 真实下载 2-3GB 装 FreeCAD 的集成测试（需 VIBECAD_RUN_INTEGRATION=1）"]
